# ULSASI---Fabric-PoC

./: CHANGELOG.md  README.md
CICD/: README-GitFlow.md  azure-pipelines.yml  deploy-configFiles.yml  deploy-gitflow-manual.yml  deploy-gitflow.yml  deployment-config.json
ConfigFiles/: README.md
ConfigFiles/environments/dev/: framework.yml  inferredMembersConfig.yml
ConfigFiles/scripts/: Test-Config.ps1  Validate-Config.ps1  config-schema.json  config-schema.yaml  deploy-configOnelake.ps1  updated_yaml_function.py  validate_config.py
Environments/DefaultLib.Environment/Setting/: Sparkcompute.yml
Eventhouses/eh_modernBI_fabricFramework_01.KQLDatabase/: DatabaseProperties.json  DatabaseSchema.kql  EmbeddedRealTimeQueryset.json
Eventhouses/eh_modernBI_fabricFramework_01_queryset.KQLQueryset/: RealTimeQueryset.json
Eventhouses/eh_modernBI_fabricFramework_01_queryset1.KQLQueryset/: RealTimeQueryset.json
Lakehouses/lh_modernBI_fabricFramework_gold_01.Lakehouse/: shortcuts.metadata.json
Lakehouses/lh_modernBI_fabricFramework_silver_01.Lakehouse/: shortcuts.metadata.json
Mirroring/sqldbdevstuff.MirroredDatabase/: mirroring.json
Pipelines/pl_dummy.DataPipeline/: pipeline-content.json
Pipelines/pl_get_fabric_ids.DataPipeline/: pipeline-content.json
Pipelines/pl_modernBI_fabricFramework_master.DataPipeline/: pipeline-content.json
Pipelines/pl_runNotebook.DataPipeline/: pipeline-content.json
Pipelines/pl_run_fabricFramework_master.DataPipeline/: pipeline-content.json
Pipelines/pl_updateProcessingDate.DataPipeline/: pipeline-content.json
Pipelines_NoSQL/pl_copyDataLog_kql.DataPipeline/: pipeline-content.json
Pipelines_NoSQL/pl_copyFrom_adventureWorks2022_kql.DataPipeline/: pipeline-content.json
Pipelines_NoSQL/pl_copyFrom_adventureWorks2022_kql_yaml.DataPipeline/: pipeline-content.json
Pipelines_NoSQL/pl_modernBI_fabricFramework_copyFromSource_kql.DataPipeline/: pipeline-content.json
Variables/vl-modernBI-fabricFramework-01.VariableLibrary/: variables.json
Warehouses/dw_modernBI_fabricFramework_01.Warehouse/: Populate admin tables.sql  dw_modernBI_fabricFramework_01.sqlproj  xmla.json
fabric_common_lib/: README.md  pyproject.toml
fabric_common_lib/src/fabric_common_lib/: __init__.py  common_functions.py  standardized_common_functions.py
fabric_common_lib/src/fabric_common_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
yaml_orchestrator_lib/: README.md  pyproject.toml
yaml_orchestrator_lib/src/yaml_orchestrator_lib/: __init__.py  yaml_orchestrator.py
yaml_orchestrator_lib/src/yaml_orchestrator_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+61 files in other folders)
